// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on deletion and rebind on undo > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeTool": {
    "customType": null,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "collaborators": Map {},
  "contextMenu": null,
  "currentChartType": "bar",
  "currentItemBackgroundColor": "transparent",
  "currentItemElbowArrow": false,
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 1,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "round",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeWidth": 2,
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "draggingElement": null,
  "editingElement": null,
  "editingFrame": null,
  "editingGroupId": null,
  "editingLinearElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridSize": null,
  "height": 0,
  "isBindingEnabled": true,
  "isLoading": false,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "multiElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 0,
  "offsetTop": 0,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": null,
  "pasteDialog": {
    "data": null,
    "shown": false,
  },
  "penDetected": false,
  "penMode": false,
  "pendingImageElementId": null,
  "previousSelectedElementIds": {
    "id6": true,
  },
  "resizingElement": null,
  "scrollX": 0,
  "scrollY": 0,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "startBoundElement": null,
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBindings": [],
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 0,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on deletion and rebind on undo > [end of test] element 0 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "id7",
      "type": "text",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": "id6",
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 5,
  "width": 100,
  "x": -100,
  "y": -50,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on deletion and rebind on undo > [end of test] element 1 1`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "id6",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 1,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": "id7",
  "index": "a1",
  "isDeleted": false,
  "lineHeight": "1.25000",
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "ola",
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "ola",
  "textAlign": "center",
  "type": "text",
  "updated": 1,
  "version": 4,
  "verticalAlign": "middle",
  "width": 30,
  "x": -65,
  "y": "-12.50000",
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on deletion and rebind on undo > [end of test] element 2 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": "id8",
  "index": "a2",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 4,
  "width": 100,
  "x": 100,
  "y": -50,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on deletion and rebind on undo > [end of test] element 3 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": {
    "elementId": "id8",
    "fixedPoint": [
      "-0.05000",
      "0.50000",
    ],
    "focus": 0,
    "gap": 1,
  },
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": "id11",
  "index": "a3",
  "isDeleted": true,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      100,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": {
    "type": 2,
  },
  "startArrowhead": null,
  "startBinding": {
    "elementId": "id6",
    "fixedPoint": [
      "1.05000",
      "0.50000",
    ],
    "focus": 0,
    "gap": 1,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1,
  "version": 7,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on deletion and rebind on undo > [end of test] history 1`] = `
History {
  "onHistoryChangedEmitter": Emitter {
    "subscribers": [
      [Function],
      [Function],
    ],
  },
  "redoStack": [],
  "undoStack": [
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {},
          "inserted": {},
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {
          "id6" => Delta {
            "deleted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a0",
              "isDeleted": false,
              "link": null,
              "locked": false,
              "opacity": 100,
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "rectangle",
              "width": 100,
              "x": -100,
              "y": -50,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
          "id7" => Delta {
            "deleted": {
              "angle": 0,
              "autoResize": true,
              "backgroundColor": "transparent",
              "boundElements": null,
              "containerId": null,
              "customData": undefined,
              "fillStyle": "solid",
              "fontFamily": 1,
              "fontSize": 20,
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a1",
              "isDeleted": false,
              "lineHeight": "1.25000",
              "link": null,
              "locked": false,
              "opacity": 100,
              "originalText": "ola",
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "text": "ola",
              "textAlign": "left",
              "type": "text",
              "verticalAlign": "top",
              "width": 100,
              "x": -200,
              "y": -200,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
          "id8" => Delta {
            "deleted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a2",
              "isDeleted": false,
              "link": null,
              "locked": false,
              "opacity": 100,
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "rectangle",
              "width": 100,
              "x": 100,
              "y": -50,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
        },
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id6": true,
            },
          },
          "inserted": {
            "selectedElementIds": {},
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id7": true,
            },
          },
          "inserted": {
            "selectedElementIds": {},
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {},
          },
          "inserted": {
            "selectedElementIds": {
              "id7": true,
            },
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {
          "id6" => Delta {
            "deleted": {
              "boundElements": [
                {
                  "id": "id7",
                  "type": "text",
                },
              ],
            },
            "inserted": {
              "boundElements": [],
            },
          },
          "id7" => Delta {
            "deleted": {
              "containerId": "id6",
              "height": 25,
              "textAlign": "center",
              "verticalAlign": "middle",
              "width": 30,
              "x": -65,
              "y": "-12.50000",
            },
            "inserted": {
              "containerId": null,
              "height": 100,
              "textAlign": "left",
              "verticalAlign": "top",
              "width": 100,
              "x": -200,
              "y": -200,
            },
          },
        },
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id11": true,
            },
            "selectedLinearElementId": "id11",
          },
          "inserted": {
            "selectedElementIds": {
              "id6": true,
            },
            "selectedLinearElementId": null,
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {
          "id11" => Delta {
            "deleted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "elbowed": false,
              "endArrowhead": "arrow",
              "endBinding": {
                "elementId": "id8",
                "fixedPoint": [
                  "-0.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 0,
              "index": "a3",
              "isDeleted": false,
              "lastCommittedPoint": null,
              "link": null,
              "locked": false,
              "opacity": 100,
              "points": [
                [
                  0,
                  0,
                ],
                [
                  100,
                  0,
                ],
              ],
              "roughness": 1,
              "roundness": {
                "type": 2,
              },
              "startArrowhead": null,
              "startBinding": {
                "elementId": "id6",
                "fixedPoint": [
                  "1.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "arrow",
              "width": 100,
              "x": 0,
              "y": 0,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
        },
        "updated": Map {
          "id6" => Delta {
            "deleted": {
              "boundElements": [
                {
                  "id": "id11",
                  "type": "arrow",
                },
              ],
            },
            "inserted": {
              "boundElements": [],
            },
          },
          "id8" => Delta {
            "deleted": {
              "boundElements": [
                {
                  "id": "id11",
                  "type": "arrow",
                },
              ],
            },
            "inserted": {
              "boundElements": [],
            },
          },
        },
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {},
          },
          "inserted": {
            "selectedElementIds": {
              "id11": true,
            },
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {
          "id11" => Delta {
            "deleted": {
              "endBinding": {
                "elementId": "id8",
                "fixedPoint": [
                  "-0.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "isDeleted": true,
              "points": [
                [
                  0,
                  0,
                ],
                [
                  100,
                  0,
                ],
              ],
              "startBinding": {
                "elementId": "id6",
                "fixedPoint": [
                  "1.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
            },
            "inserted": {
              "endBinding": {
                "elementId": "id8",
                "fixedPoint": [
                  "-0.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "isDeleted": false,
              "points": [
                [
                  0,
                  0,
                ],
                [
                  100,
                  0,
                ],
              ],
              "startBinding": {
                "elementId": "id6",
                "fixedPoint": [
                  "1.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
            },
          },
        },
        "removed": Map {},
        "updated": Map {
          "id6" => Delta {
            "deleted": {
              "boundElements": [],
            },
            "inserted": {
              "boundElements": [
                {
                  "id": "id11",
                  "type": "arrow",
                },
              ],
            },
          },
          "id8" => Delta {
            "deleted": {
              "boundElements": [],
            },
            "inserted": {
              "boundElements": [
                {
                  "id": "id11",
                  "type": "arrow",
                },
              ],
            },
          },
        },
      },
    },
  ],
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on deletion and rebind on undo > [end of test] number of elements 1`] = `4`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on deletion and rebind on undo > [end of test] number of renders 1`] = `12`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on undo and rebind on redo > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeTool": {
    "customType": null,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "collaborators": Map {},
  "contextMenu": null,
  "currentChartType": "bar",
  "currentItemBackgroundColor": "transparent",
  "currentItemElbowArrow": false,
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 1,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "round",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeWidth": 2,
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "draggingElement": null,
  "editingElement": null,
  "editingFrame": null,
  "editingGroupId": null,
  "editingLinearElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridSize": null,
  "height": 0,
  "isBindingEnabled": true,
  "isLoading": false,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "multiElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 0,
  "offsetTop": 0,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": null,
  "pasteDialog": {
    "data": null,
    "shown": false,
  },
  "penDetected": false,
  "penMode": false,
  "pendingImageElementId": null,
  "previousSelectedElementIds": {
    "id0": true,
  },
  "resizingElement": null,
  "scrollX": 0,
  "scrollY": 0,
  "selectedElementIds": {
    "id5": true,
  },
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "startBoundElement": null,
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBindings": [],
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 0,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on undo and rebind on redo > [end of test] element 0 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "id1",
      "type": "text",
    },
    {
      "id": "id5",
      "type": "arrow",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": "id0",
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 8,
  "width": 100,
  "x": -100,
  "y": -50,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on undo and rebind on redo > [end of test] element 1 1`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "id0",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 1,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": "id1",
  "index": "a1",
  "isDeleted": false,
  "lineHeight": "1.25000",
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "ola",
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "ola",
  "textAlign": "center",
  "type": "text",
  "updated": 1,
  "version": 8,
  "verticalAlign": "middle",
  "width": 30,
  "x": -65,
  "y": "-12.50000",
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on undo and rebind on redo > [end of test] element 2 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "id5",
      "type": "arrow",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": "id2",
  "index": "a2",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 7,
  "width": 100,
  "x": 100,
  "y": -50,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on undo and rebind on redo > [end of test] element 3 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": {
    "elementId": "id2",
    "fixedPoint": [
      "-0.05000",
      "0.50000",
    ],
    "focus": 0,
    "gap": 1,
  },
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": "id5",
  "index": "a3",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      98,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": {
    "type": 2,
  },
  "startArrowhead": null,
  "startBinding": {
    "elementId": "id0",
    "fixedPoint": [
      "1.05000",
      "0.50000",
    ],
    "focus": 0,
    "gap": 1,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1,
  "version": 10,
  "width": 98,
  "x": 1,
  "y": 0,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on undo and rebind on redo > [end of test] history 1`] = `
History {
  "onHistoryChangedEmitter": Emitter {
    "subscribers": [
      [Function],
      [Function],
    ],
  },
  "redoStack": [],
  "undoStack": [
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {},
          "inserted": {},
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {
          "id0" => Delta {
            "deleted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a0",
              "isDeleted": false,
              "link": null,
              "locked": false,
              "opacity": 100,
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "rectangle",
              "width": 100,
              "x": -100,
              "y": -50,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
          "id1" => Delta {
            "deleted": {
              "angle": 0,
              "autoResize": true,
              "backgroundColor": "transparent",
              "boundElements": null,
              "containerId": null,
              "customData": undefined,
              "fillStyle": "solid",
              "fontFamily": 1,
              "fontSize": 20,
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a1",
              "isDeleted": false,
              "lineHeight": "1.25000",
              "link": null,
              "locked": false,
              "opacity": 100,
              "originalText": "ola",
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "text": "ola",
              "textAlign": "left",
              "type": "text",
              "verticalAlign": "top",
              "width": 100,
              "x": -200,
              "y": -200,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
          "id2" => Delta {
            "deleted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a2",
              "isDeleted": false,
              "link": null,
              "locked": false,
              "opacity": 100,
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "rectangle",
              "width": 100,
              "x": 100,
              "y": -50,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
        },
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id0": true,
            },
          },
          "inserted": {
            "selectedElementIds": {},
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id1": true,
            },
          },
          "inserted": {
            "selectedElementIds": {},
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {},
          },
          "inserted": {
            "selectedElementIds": {
              "id1": true,
            },
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {
          "id0" => Delta {
            "deleted": {
              "boundElements": [
                {
                  "id": "id1",
                  "type": "text",
                },
              ],
            },
            "inserted": {
              "boundElements": [],
            },
          },
          "id1" => Delta {
            "deleted": {
              "containerId": "id0",
              "height": 25,
              "textAlign": "center",
              "verticalAlign": "middle",
              "width": 30,
              "x": -65,
              "y": "-12.50000",
            },
            "inserted": {
              "containerId": null,
              "height": 100,
              "textAlign": "left",
              "verticalAlign": "top",
              "width": 100,
              "x": -200,
              "y": -200,
            },
          },
        },
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id5": true,
            },
            "selectedLinearElementId": "id5",
          },
          "inserted": {
            "selectedElementIds": {
              "id0": true,
            },
            "selectedLinearElementId": null,
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {
          "id5" => Delta {
            "deleted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "elbowed": false,
              "endArrowhead": "arrow",
              "endBinding": {
                "elementId": "id2",
                "fixedPoint": [
                  "-0.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 0,
              "index": "a3",
              "isDeleted": false,
              "lastCommittedPoint": null,
              "link": null,
              "locked": false,
              "opacity": 100,
              "points": [
                [
                  0,
                  0,
                ],
                [
                  100,
                  0,
                ],
              ],
              "roughness": 1,
              "roundness": {
                "type": 2,
              },
              "startArrowhead": null,
              "startBinding": {
                "elementId": "id0",
                "fixedPoint": [
                  "1.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "arrow",
              "width": 100,
              "x": 0,
              "y": 0,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
        },
        "updated": Map {
          "id0" => Delta {
            "deleted": {
              "boundElements": [
                {
                  "id": "id5",
                  "type": "arrow",
                },
              ],
            },
            "inserted": {
              "boundElements": [],
            },
          },
          "id2" => Delta {
            "deleted": {
              "boundElements": [
                {
                  "id": "id5",
                  "type": "arrow",
                },
              ],
            },
            "inserted": {
              "boundElements": [],
            },
          },
        },
      },
    },
  ],
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on undo and rebind on redo > [end of test] number of elements 1`] = `4`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind arrow from non deleted bindable elements on undo and rebind on redo > [end of test] number of renders 1`] = `13`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind everything from non deleted elements when iterating through the whole undo stack and vice versa rebind everything on redo > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeTool": {
    "customType": null,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "collaborators": Map {},
  "contextMenu": null,
  "currentChartType": "bar",
  "currentItemBackgroundColor": "transparent",
  "currentItemElbowArrow": false,
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 1,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "round",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeWidth": 2,
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "draggingElement": null,
  "editingElement": null,
  "editingFrame": null,
  "editingGroupId": null,
  "editingLinearElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridSize": null,
  "height": 0,
  "isBindingEnabled": true,
  "isLoading": false,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "multiElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 0,
  "offsetTop": 0,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": null,
  "pasteDialog": {
    "data": null,
    "shown": false,
  },
  "penDetected": false,
  "penMode": false,
  "pendingImageElementId": null,
  "previousSelectedElementIds": {
    "id12": true,
  },
  "resizingElement": null,
  "scrollX": 0,
  "scrollY": 0,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "startBoundElement": null,
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBindings": [],
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 0,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind everything from non deleted elements when iterating through the whole undo stack and vice versa rebind everything on redo > [end of test] element 0 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": "id12",
  "index": "a0",
  "isDeleted": true,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 7,
  "width": 100,
  "x": -100,
  "y": -50,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind everything from non deleted elements when iterating through the whole undo stack and vice versa rebind everything on redo > [end of test] element 1 1`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": null,
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 1,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": "id13",
  "index": "a1",
  "isDeleted": true,
  "lineHeight": "1.25000",
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "ola",
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "ola",
  "textAlign": "left",
  "type": "text",
  "updated": 1,
  "version": 8,
  "verticalAlign": "top",
  "width": 100,
  "x": -200,
  "y": -200,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind everything from non deleted elements when iterating through the whole undo stack and vice versa rebind everything on redo > [end of test] element 2 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": "id14",
  "index": "a2",
  "isDeleted": true,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 5,
  "width": 100,
  "x": 100,
  "y": -50,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind everything from non deleted elements when iterating through the whole undo stack and vice versa rebind everything on redo > [end of test] element 3 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": {
    "elementId": "id14",
    "fixedPoint": [
      "-0.05000",
      "0.50000",
    ],
    "focus": 0,
    "gap": 1,
  },
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": "id17",
  "index": "a3",
  "isDeleted": true,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      100,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": {
    "type": 2,
  },
  "startArrowhead": null,
  "startBinding": {
    "elementId": "id12",
    "fixedPoint": [
      "1.05000",
      "0.50000",
    ],
    "focus": 0,
    "gap": 1,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1,
  "version": 7,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind everything from non deleted elements when iterating through the whole undo stack and vice versa rebind everything on redo > [end of test] history 1`] = `
History {
  "onHistoryChangedEmitter": Emitter {
    "subscribers": [
      [Function],
      [Function],
    ],
  },
  "redoStack": [
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id12": true,
            },
            "selectedLinearElementId": null,
          },
          "inserted": {
            "selectedElementIds": {
              "id17": true,
            },
            "selectedLinearElementId": "id17",
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {
          "id17" => Delta {
            "deleted": {
              "isDeleted": true,
            },
            "inserted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "elbowed": false,
              "endArrowhead": "arrow",
              "endBinding": {
                "elementId": "id14",
                "fixedPoint": [
                  "-0.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 0,
              "index": "a3",
              "isDeleted": false,
              "lastCommittedPoint": null,
              "link": null,
              "locked": false,
              "opacity": 100,
              "points": [
                [
                  0,
                  0,
                ],
                [
                  100,
                  0,
                ],
              ],
              "roughness": 1,
              "roundness": {
                "type": 2,
              },
              "startArrowhead": null,
              "startBinding": {
                "elementId": "id12",
                "fixedPoint": [
                  "1.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "arrow",
              "width": 100,
              "x": 0,
              "y": 0,
            },
          },
        },
        "removed": Map {},
        "updated": Map {
          "id12" => Delta {
            "deleted": {
              "boundElements": [],
            },
            "inserted": {
              "boundElements": [
                {
                  "id": "id17",
                  "type": "arrow",
                },
              ],
            },
          },
          "id14" => Delta {
            "deleted": {
              "boundElements": [],
            },
            "inserted": {
              "boundElements": [
                {
                  "id": "id17",
                  "type": "arrow",
                },
              ],
            },
          },
        },
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id13": true,
            },
          },
          "inserted": {
            "selectedElementIds": {},
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {
          "id12" => Delta {
            "deleted": {
              "boundElements": [],
            },
            "inserted": {
              "boundElements": [
                {
                  "id": "id13",
                  "type": "text",
                },
              ],
            },
          },
          "id13" => Delta {
            "deleted": {
              "containerId": null,
              "height": 100,
              "textAlign": "left",
              "verticalAlign": "top",
              "width": 100,
              "x": -200,
              "y": -200,
            },
            "inserted": {
              "containerId": "id12",
              "height": 25,
              "textAlign": "center",
              "verticalAlign": "middle",
              "width": 30,
              "x": -65,
              "y": "-12.50000",
            },
          },
        },
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {},
          },
          "inserted": {
            "selectedElementIds": {
              "id13": true,
            },
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {},
          },
          "inserted": {
            "selectedElementIds": {
              "id12": true,
            },
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {},
          "inserted": {},
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {
          "id12" => Delta {
            "deleted": {
              "isDeleted": true,
            },
            "inserted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a0",
              "isDeleted": false,
              "link": null,
              "locked": false,
              "opacity": 100,
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "rectangle",
              "width": 100,
              "x": -100,
              "y": -50,
            },
          },
          "id13" => Delta {
            "deleted": {
              "isDeleted": true,
            },
            "inserted": {
              "angle": 0,
              "autoResize": true,
              "backgroundColor": "transparent",
              "boundElements": null,
              "containerId": null,
              "customData": undefined,
              "fillStyle": "solid",
              "fontFamily": 1,
              "fontSize": 20,
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a1",
              "isDeleted": false,
              "lineHeight": "1.25000",
              "link": null,
              "locked": false,
              "opacity": 100,
              "originalText": "ola",
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "text": "ola",
              "textAlign": "left",
              "type": "text",
              "verticalAlign": "top",
              "width": 100,
              "x": -200,
              "y": -200,
            },
          },
          "id14" => Delta {
            "deleted": {
              "isDeleted": true,
            },
            "inserted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a2",
              "isDeleted": false,
              "link": null,
              "locked": false,
              "opacity": 100,
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "rectangle",
              "width": 100,
              "x": 100,
              "y": -50,
            },
          },
        },
        "removed": Map {},
        "updated": Map {},
      },
    },
  ],
  "undoStack": [],
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind everything from non deleted elements when iterating through the whole undo stack and vice versa rebind everything on redo > [end of test] number of elements 1`] = `4`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind everything from non deleted elements when iterating through the whole undo stack and vice versa rebind everything on redo > [end of test] number of renders 1`] = `16`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangle from arrow on deletion and rebind on undo > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeTool": {
    "customType": null,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "collaborators": Map {},
  "contextMenu": null,
  "currentChartType": "bar",
  "currentItemBackgroundColor": "transparent",
  "currentItemElbowArrow": false,
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 1,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "round",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeWidth": 2,
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "draggingElement": null,
  "editingElement": null,
  "editingFrame": null,
  "editingGroupId": null,
  "editingLinearElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridSize": null,
  "height": 0,
  "isBindingEnabled": true,
  "isLoading": false,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "multiElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 0,
  "offsetTop": 0,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": null,
  "pasteDialog": {
    "data": null,
    "shown": false,
  },
  "penDetected": false,
  "penMode": false,
  "pendingImageElementId": null,
  "previousSelectedElementIds": {},
  "resizingElement": null,
  "scrollX": 0,
  "scrollY": 0,
  "selectedElementIds": {},
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "startBoundElement": null,
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBindings": [],
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 0,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangle from arrow on deletion and rebind on undo > [end of test] element 0 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "id19",
      "type": "text",
    },
    {
      "id": "id23",
      "type": "arrow",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": "id18",
  "index": "a0",
  "isDeleted": true,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 5,
  "width": 100,
  "x": -100,
  "y": -50,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangle from arrow on deletion and rebind on undo > [end of test] element 1 1`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "id18",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 1,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": "id19",
  "index": "a1",
  "isDeleted": true,
  "lineHeight": "1.25000",
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "ola",
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "ola",
  "textAlign": "center",
  "type": "text",
  "updated": 1,
  "version": 5,
  "verticalAlign": "middle",
  "width": 30,
  "x": -65,
  "y": "-12.50000",
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangle from arrow on deletion and rebind on undo > [end of test] element 2 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "id23",
      "type": "arrow",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": "id20",
  "index": "a2",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 3,
  "width": 100,
  "x": 100,
  "y": -50,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangle from arrow on deletion and rebind on undo > [end of test] element 3 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": {
    "elementId": "id20",
    "fixedPoint": [
      "-0.05000",
      "0.50000",
    ],
    "focus": 0,
    "gap": 1,
  },
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": "id23",
  "index": "a3",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      100,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": {
    "type": 2,
  },
  "startArrowhead": null,
  "startBinding": null,
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1,
  "version": 7,
  "width": 100,
  "x": 0,
  "y": 0,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangle from arrow on deletion and rebind on undo > [end of test] history 1`] = `
History {
  "onHistoryChangedEmitter": Emitter {
    "subscribers": [
      [Function],
      [Function],
    ],
  },
  "redoStack": [],
  "undoStack": [
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {},
          "inserted": {},
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {
          "id18" => Delta {
            "deleted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a0",
              "isDeleted": false,
              "link": null,
              "locked": false,
              "opacity": 100,
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "rectangle",
              "width": 100,
              "x": -100,
              "y": -50,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
          "id19" => Delta {
            "deleted": {
              "angle": 0,
              "autoResize": true,
              "backgroundColor": "transparent",
              "boundElements": null,
              "containerId": null,
              "customData": undefined,
              "fillStyle": "solid",
              "fontFamily": 1,
              "fontSize": 20,
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a1",
              "isDeleted": false,
              "lineHeight": "1.25000",
              "link": null,
              "locked": false,
              "opacity": 100,
              "originalText": "ola",
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "text": "ola",
              "textAlign": "left",
              "type": "text",
              "verticalAlign": "top",
              "width": 100,
              "x": -200,
              "y": -200,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
          "id20" => Delta {
            "deleted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a2",
              "isDeleted": false,
              "link": null,
              "locked": false,
              "opacity": 100,
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "rectangle",
              "width": 100,
              "x": 100,
              "y": -50,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
        },
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id18": true,
            },
          },
          "inserted": {
            "selectedElementIds": {},
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id19": true,
            },
          },
          "inserted": {
            "selectedElementIds": {},
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {},
          },
          "inserted": {
            "selectedElementIds": {
              "id19": true,
            },
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {
          "id18" => Delta {
            "deleted": {
              "boundElements": [
                {
                  "id": "id19",
                  "type": "text",
                },
              ],
            },
            "inserted": {
              "boundElements": [],
            },
          },
          "id19" => Delta {
            "deleted": {
              "containerId": "id18",
              "height": 25,
              "textAlign": "center",
              "verticalAlign": "middle",
              "width": 30,
              "x": -65,
              "y": "-12.50000",
            },
            "inserted": {
              "containerId": null,
              "height": 100,
              "textAlign": "left",
              "verticalAlign": "top",
              "width": 100,
              "x": -200,
              "y": -200,
            },
          },
        },
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id23": true,
            },
            "selectedLinearElementId": "id23",
          },
          "inserted": {
            "selectedElementIds": {
              "id18": true,
            },
            "selectedLinearElementId": null,
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {
          "id23" => Delta {
            "deleted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "elbowed": false,
              "endArrowhead": "arrow",
              "endBinding": {
                "elementId": "id20",
                "fixedPoint": [
                  "-0.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 0,
              "index": "a3",
              "isDeleted": false,
              "lastCommittedPoint": null,
              "link": null,
              "locked": false,
              "opacity": 100,
              "points": [
                [
                  0,
                  0,
                ],
                [
                  100,
                  0,
                ],
              ],
              "roughness": 1,
              "roundness": {
                "type": 2,
              },
              "startArrowhead": null,
              "startBinding": {
                "elementId": "id18",
                "fixedPoint": [
                  "1.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "arrow",
              "width": 100,
              "x": 0,
              "y": 0,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
        },
        "updated": Map {
          "id18" => Delta {
            "deleted": {
              "boundElements": [
                {
                  "id": "id23",
                  "type": "arrow",
                },
              ],
            },
            "inserted": {
              "boundElements": [],
            },
          },
          "id20" => Delta {
            "deleted": {
              "boundElements": [
                {
                  "id": "id23",
                  "type": "arrow",
                },
              ],
            },
            "inserted": {
              "boundElements": [],
            },
          },
        },
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id18": true,
            },
            "selectedLinearElementId": null,
          },
          "inserted": {
            "selectedElementIds": {
              "id23": true,
            },
            "selectedLinearElementId": "id23",
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {},
          },
          "inserted": {
            "selectedElementIds": {
              "id18": true,
            },
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {
          "id18" => Delta {
            "deleted": {
              "isDeleted": true,
            },
            "inserted": {
              "isDeleted": false,
            },
          },
          "id19" => Delta {
            "deleted": {
              "isDeleted": true,
            },
            "inserted": {
              "isDeleted": false,
            },
          },
        },
        "removed": Map {},
        "updated": Map {
          "id23" => Delta {
            "deleted": {
              "endBinding": {
                "elementId": "id20",
                "fixedPoint": [
                  "-0.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "points": [
                [
                  0,
                  0,
                ],
                [
                  100,
                  0,
                ],
              ],
              "startBinding": null,
            },
            "inserted": {
              "endBinding": {
                "elementId": "id20",
                "fixedPoint": [
                  "-0.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "points": [
                [
                  0,
                  0,
                ],
                [
                  100,
                  0,
                ],
              ],
              "startBinding": {
                "elementId": "id18",
                "fixedPoint": [
                  "1.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
            },
          },
        },
      },
    },
  ],
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangle from arrow on deletion and rebind on undo > [end of test] number of elements 1`] = `4`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangle from arrow on deletion and rebind on undo > [end of test] number of renders 1`] = `14`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangles from arrow on deletion and rebind on undo > [end of test] appState 1`] = `
{
  "activeEmbeddable": null,
  "activeTool": {
    "customType": null,
    "lastActiveTool": null,
    "locked": false,
    "type": "selection",
  },
  "collaborators": Map {},
  "contextMenu": null,
  "currentChartType": "bar",
  "currentItemBackgroundColor": "transparent",
  "currentItemElbowArrow": false,
  "currentItemEndArrowhead": "arrow",
  "currentItemFillStyle": "solid",
  "currentItemFontFamily": 1,
  "currentItemFontSize": 20,
  "currentItemOpacity": 100,
  "currentItemRoughness": 1,
  "currentItemRoundness": "round",
  "currentItemStartArrowhead": null,
  "currentItemStrokeColor": "#1e1e1e",
  "currentItemStrokeStyle": "solid",
  "currentItemStrokeWidth": 2,
  "currentItemTextAlign": "left",
  "cursorButton": "up",
  "defaultSidebarDockedPreference": false,
  "draggingElement": null,
  "editingElement": null,
  "editingFrame": null,
  "editingGroupId": null,
  "editingLinearElement": null,
  "elementsToHighlight": null,
  "errorMessage": null,
  "exportBackground": true,
  "exportEmbedScene": false,
  "exportScale": 1,
  "exportWithDarkMode": false,
  "fileHandle": null,
  "followedBy": Set {},
  "frameRendering": {
    "clip": true,
    "enabled": true,
    "name": true,
    "outline": true,
  },
  "frameToHighlight": null,
  "gridSize": null,
  "height": 0,
  "isBindingEnabled": true,
  "isLoading": false,
  "isResizing": false,
  "isRotating": false,
  "lastPointerDownWith": "mouse",
  "multiElement": null,
  "objectsSnapModeEnabled": false,
  "offsetLeft": 0,
  "offsetTop": 0,
  "openDialog": null,
  "openMenu": null,
  "openPopup": null,
  "openSidebar": null,
  "originSnapOffset": null,
  "pasteDialog": {
    "data": null,
    "shown": false,
  },
  "penDetected": false,
  "penMode": false,
  "pendingImageElementId": null,
  "previousSelectedElementIds": {
    "id25": true,
  },
  "resizingElement": null,
  "scrollX": 0,
  "scrollY": 0,
  "selectedElementIds": {
    "id25": true,
    "id27": true,
  },
  "selectedElementsAreBeingDragged": false,
  "selectedGroupIds": {},
  "selectionElement": null,
  "shouldCacheIgnoreZoom": false,
  "showHyperlinkPopup": false,
  "showWelcomeScreen": true,
  "snapLines": [],
  "startBoundElement": null,
  "stats": {
    "open": false,
    "panels": 3,
  },
  "suggestedBindings": [],
  "theme": "light",
  "toast": null,
  "userToFollow": null,
  "viewBackgroundColor": "#ffffff",
  "viewModeEnabled": false,
  "width": 0,
  "zenModeEnabled": false,
  "zoom": {
    "value": 1,
  },
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangles from arrow on deletion and rebind on undo > [end of test] element 0 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "id30",
      "type": "arrow",
    },
    {
      "id": "id26",
      "type": "text",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": "id25",
  "index": "a0",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 8,
  "width": 100,
  "x": -100,
  "y": -50,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangles from arrow on deletion and rebind on undo > [end of test] element 1 1`] = `
{
  "angle": 0,
  "autoResize": true,
  "backgroundColor": "transparent",
  "boundElements": null,
  "containerId": "id25",
  "customData": undefined,
  "fillStyle": "solid",
  "fontFamily": 1,
  "fontSize": 20,
  "frameId": null,
  "groupIds": [],
  "height": 25,
  "id": "id26",
  "index": "a1",
  "isDeleted": false,
  "lineHeight": "1.25000",
  "link": null,
  "locked": false,
  "opacity": 100,
  "originalText": "ola",
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "text": "ola",
  "textAlign": "center",
  "type": "text",
  "updated": 1,
  "version": 8,
  "verticalAlign": "middle",
  "width": 30,
  "x": -65,
  "y": "-12.50000",
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangles from arrow on deletion and rebind on undo > [end of test] element 2 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": [
    {
      "id": "id30",
      "type": "arrow",
    },
  ],
  "customData": undefined,
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 100,
  "id": "id27",
  "index": "a2",
  "isDeleted": false,
  "link": null,
  "locked": false,
  "opacity": 100,
  "roughness": 1,
  "roundness": {
    "type": 3,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "rectangle",
  "updated": 1,
  "version": 5,
  "width": 100,
  "x": 100,
  "y": -50,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangles from arrow on deletion and rebind on undo > [end of test] element 3 1`] = `
{
  "angle": 0,
  "backgroundColor": "transparent",
  "boundElements": null,
  "customData": undefined,
  "elbowed": false,
  "endArrowhead": "arrow",
  "endBinding": {
    "elementId": "id27",
    "fixedPoint": [
      "-0.05000",
      "0.50000",
    ],
    "focus": 0,
    "gap": 1,
  },
  "fillStyle": "solid",
  "frameId": null,
  "groupIds": [],
  "height": 0,
  "id": "id30",
  "index": "a3",
  "isDeleted": false,
  "lastCommittedPoint": null,
  "link": null,
  "locked": false,
  "opacity": 100,
  "points": [
    [
      0,
      0,
    ],
    [
      98,
      0,
    ],
  ],
  "roughness": 1,
  "roundness": {
    "type": 2,
  },
  "startArrowhead": null,
  "startBinding": {
    "elementId": "id25",
    "fixedPoint": [
      "1.05000",
      "0.50000",
    ],
    "focus": 0,
    "gap": 1,
  },
  "strokeColor": "#1e1e1e",
  "strokeStyle": "solid",
  "strokeWidth": 2,
  "type": "arrow",
  "updated": 1,
  "version": 11,
  "width": 98,
  "x": 1,
  "y": 0,
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangles from arrow on deletion and rebind on undo > [end of test] history 1`] = `
History {
  "onHistoryChangedEmitter": Emitter {
    "subscribers": [
      [Function],
      [Function],
    ],
  },
  "redoStack": [
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id25": true,
              "id27": true,
            },
          },
          "inserted": {
            "selectedElementIds": {},
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {
          "id25" => Delta {
            "deleted": {
              "isDeleted": false,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
          "id26" => Delta {
            "deleted": {
              "isDeleted": false,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
          "id27" => Delta {
            "deleted": {
              "isDeleted": false,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
        },
        "updated": Map {
          "id30" => Delta {
            "deleted": {
              "endBinding": {
                "elementId": "id27",
                "fixedPoint": [
                  "-0.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "points": [
                [
                  0,
                  0,
                ],
                [
                  100,
                  0,
                ],
              ],
              "startBinding": {
                "elementId": "id25",
                "fixedPoint": [
                  "1.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
            },
            "inserted": {
              "endBinding": null,
              "points": [
                [
                  0,
                  0,
                ],
                [
                  100,
                  0,
                ],
              ],
              "startBinding": null,
            },
          },
        },
      },
    },
  ],
  "undoStack": [
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {},
          "inserted": {},
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {
          "id25" => Delta {
            "deleted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a0",
              "isDeleted": false,
              "link": null,
              "locked": false,
              "opacity": 100,
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "rectangle",
              "width": 100,
              "x": -100,
              "y": -50,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
          "id26" => Delta {
            "deleted": {
              "angle": 0,
              "autoResize": true,
              "backgroundColor": "transparent",
              "boundElements": null,
              "containerId": null,
              "customData": undefined,
              "fillStyle": "solid",
              "fontFamily": 1,
              "fontSize": 20,
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a1",
              "isDeleted": false,
              "lineHeight": "1.25000",
              "link": null,
              "locked": false,
              "opacity": 100,
              "originalText": "ola",
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "text": "ola",
              "textAlign": "left",
              "type": "text",
              "verticalAlign": "top",
              "width": 100,
              "x": -200,
              "y": -200,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
          "id27" => Delta {
            "deleted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 100,
              "index": "a2",
              "isDeleted": false,
              "link": null,
              "locked": false,
              "opacity": 100,
              "roughness": 1,
              "roundness": {
                "type": 3,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "rectangle",
              "width": 100,
              "x": 100,
              "y": -50,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
        },
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id25": true,
            },
          },
          "inserted": {
            "selectedElementIds": {},
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id26": true,
            },
          },
          "inserted": {
            "selectedElementIds": {},
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {},
          },
          "inserted": {
            "selectedElementIds": {
              "id26": true,
            },
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {
          "id25" => Delta {
            "deleted": {
              "boundElements": [
                {
                  "id": "id26",
                  "type": "text",
                },
              ],
            },
            "inserted": {
              "boundElements": [],
            },
          },
          "id26" => Delta {
            "deleted": {
              "containerId": "id25",
              "height": 25,
              "textAlign": "center",
              "verticalAlign": "middle",
              "width": 30,
              "x": -65,
              "y": "-12.50000",
            },
            "inserted": {
              "containerId": null,
              "height": 100,
              "textAlign": "left",
              "verticalAlign": "top",
              "width": 100,
              "x": -200,
              "y": -200,
            },
          },
        },
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id30": true,
            },
            "selectedLinearElementId": "id30",
          },
          "inserted": {
            "selectedElementIds": {
              "id25": true,
            },
            "selectedLinearElementId": null,
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {
          "id30" => Delta {
            "deleted": {
              "angle": 0,
              "backgroundColor": "transparent",
              "boundElements": null,
              "customData": undefined,
              "elbowed": false,
              "endArrowhead": "arrow",
              "endBinding": {
                "elementId": "id27",
                "fixedPoint": [
                  "-0.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "fillStyle": "solid",
              "frameId": null,
              "groupIds": [],
              "height": 0,
              "index": "a3",
              "isDeleted": false,
              "lastCommittedPoint": null,
              "link": null,
              "locked": false,
              "opacity": 100,
              "points": [
                [
                  0,
                  0,
                ],
                [
                  100,
                  0,
                ],
              ],
              "roughness": 1,
              "roundness": {
                "type": 2,
              },
              "startArrowhead": null,
              "startBinding": {
                "elementId": "id25",
                "fixedPoint": [
                  "1.05000",
                  "0.50000",
                ],
                "focus": 0,
                "gap": 1,
              },
              "strokeColor": "#1e1e1e",
              "strokeStyle": "solid",
              "strokeWidth": 2,
              "type": "arrow",
              "width": 100,
              "x": 0,
              "y": 0,
            },
            "inserted": {
              "isDeleted": true,
            },
          },
        },
        "updated": Map {
          "id25" => Delta {
            "deleted": {
              "boundElements": [
                {
                  "id": "id30",
                  "type": "arrow",
                },
              ],
            },
            "inserted": {
              "boundElements": [],
            },
          },
          "id27" => Delta {
            "deleted": {
              "boundElements": [
                {
                  "id": "id30",
                  "type": "arrow",
                },
              ],
            },
            "inserted": {
              "boundElements": [],
            },
          },
        },
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id25": true,
            },
            "selectedLinearElementId": null,
          },
          "inserted": {
            "selectedElementIds": {
              "id30": true,
            },
            "selectedLinearElementId": "id30",
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {},
      },
    },
    HistoryEntry {
      "appStateChange": AppStateChange {
        "delta": Delta {
          "deleted": {
            "selectedElementIds": {
              "id27": true,
            },
          },
          "inserted": {
            "selectedElementIds": {},
          },
        },
      },
      "elementsChange": ElementsChange {
        "added": Map {},
        "removed": Map {},
        "updated": Map {},
      },
    },
  ],
}
`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangles from arrow on deletion and rebind on undo > [end of test] number of elements 1`] = `4`;

exports[`history > singleplayer undo/redo > should support bidirectional bindings > should unbind rectangles from arrow on deletion and rebind on undo > [end of test] number of renders 1`] = `16`;
